@@ -1,3 +1,8 @@
+2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.05)
+
+	* Makefile.PL: Add requires_external_bin 'php'
+	* t/: Don't fail tests unless TEST_FAIL is set
+	
 2007-06-06 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.04)
 
 	* Test.php: Note that new versions can be found on CPAN
